# bt_api_bitfinex

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/bt_api_bitfinex/: __init__.py  plugin.py  registry_registration.py
src/bt_api_bitfinex/containers/: __init__.py
src/bt_api_bitfinex/containers/accounts/: __init__.py  bitfinex_account.py
src/bt_api_bitfinex/containers/balances/: __init__.py  bitfinex_balance.py
src/bt_api_bitfinex/containers/bars/: __init__.py  bitfinex_bar.py
src/bt_api_bitfinex/containers/fundingrates/: __init__.py  bitfinex_funding_rate.py
src/bt_api_bitfinex/containers/orderbooks/: __init__.py  bitfinex_orderbook.py
src/bt_api_bitfinex/containers/orders/: __init__.py  bitfinex_order.py
src/bt_api_bitfinex/containers/trades/: __init__.py  bitfinex_trade.py
src/bt_api_bitfinex/errors/: __init__.py  bitfinex_translator.py
src/bt_api_bitfinex/exchange_data/: __init__.py
src/bt_api_bitfinex/feeds/live_bitfinex/: __init__.py  request_base.py  spot.py
src/bt_api_bitfinex/tickers/: __init__.py  bitfinex_ticker.py
tests/containers/accounts/: test_bitfinex_account.py
tests/containers/balances/: test_bitfinex_balance.py
tests/containers/bars/: test_bitfinex_bar.py
tests/containers/exchanges/: test_bitfinex_exchange_data.py
tests/containers/fundingrates/: test_bitfinex_funding_rate.py
tests/containers/orderbooks/: test_bitfinex_orderbook.py
tests/containers/orders/: test_bitfinex_order.py
tests/containers/tickers/: test_bitfinex_ticker.py
tests/containers/trades/: test_bitfinex_trade.py
tests/errors/: test_bitfinex_error_translator.py
tests/exchange_registers/: test_register_bitfinex.py
tests/feeds/: test_bitfinex_request_base.py
