[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_bitfinex"
version = "0.1.1"
description = "Bitfinex exchange plugin for bt_api"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "bt_api_base>=0.15,<1.0",
    "requests>=2.28",
    "websocket-client>=1.5",
    "aiohttp>=3.9",
]
keywords = ["bt_api", "bitfinex", "exchange", "trading", "api"]
authors = [
    { name = "cloudQuant", email = "yunjinqi@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_bitfinex"
Documentation = "https://bt-api-bitfinex.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_bitfinex"

[project.entry-points."bt_api.plugins"]
bitfinex = "bt_api_bitfinex.plugin:register_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bt_api_bitfinex = ["configs/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "*.bak",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF100", "S", "PERF", "PIE790"]
ignore = ["E501", "B008", "N802", "N803", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
